--- a/tumblrtest.html
+++ b/tumblrtest.html
@@ -74,7 +74,7 @@
 	<div id="results"></div>
 	<input id="tag1" type="text" placeholder="FIRST TAG" />
 	<input id="tag2" type="text" placeholder="SECOND TAG" />
-	<input id="tag3" type="text" placeholder="THIRD TAG" />
+	<input id="tag3" type="text" placeholder="THIRD TAGtest" />
 	<div id="go">GO</div>
 	<div id="stop">STOP</div>
 	<div id="clear">CLEAR</div>
